# s25-Red-1

./: .env.sample  .gitignore  404.html  Makefile  README.md  SPECIFICATION.md  glossary.html  index.html  labs.html  mkdocs.yml  package.json  presentation.html  prototype.html  pyproject.toml  references.html  requirements.txt  s25-Red-1.code-workspace  sitemap.xml  team.html
.github/workflows/: main-ci.yml  site-deploy.yml
db/: schema.sql
db/migrations/: 20250129040542_init_pg_vector_and_uuid.sql  20250129040912_init_openapi_spec_tables.sql  20250208161915_add_account_and_api_keys.sql  20250210132601_relate_path_directly_to_spec.sql  20250211115733_add_url_to_server.sql  20250227131916_make_cc_config_nullable_on_spec.sql  20250301201046_openapi_spec_add_base_url.sql  20250306023308_add_operation_diminish_spec.sql  20250320014906_init.sql  20250411023536_per_sentence_operation_embedding.sql
db/seed/: dev_seed.py  dev_truncate.py
docker/dev/: README.md  docker-compose.yml  env_dump
docs/: glossary.md  index.md  labs.md  presentation.md  prototype.md  references.md  team.md
docs/pdf/: CS 411W - CueCode POSTER (2) (1).pub
python-coverage/: index.html  z_13fc5b104211a89f___init___py.html  z_13fc5b104211a89f_test_bp_portal_py.html  z_145eef247bfb46b6___init___py.html  z_6ae8fcaa6a2c5c43___init___py.html  z_6ae8fcaa6a2c5c43_test_app_py.html  z_6de951d596a98d50___init___py.html  z_6de951d596a98d50_test_bp_api_py.html  z_6e5025570506519f___init___py.html  z_70545530dd5e4f86_test_db_engine_integration_py.html  z_a9628d2be64cb3fa___init___py.html  z_a9628d2be64cb3fa_config_algo_py.html  z_a9628d2be64cb3fa_openapi_parsing_py.html  z_a9628d2be64cb3fa_openapi_py.html  z_a9628d2be64cb3fa_openapi_schema_adapter_py.html  z_a9628d2be64cb3fa_openapi_schema_validate_py.html  z_a9628d2be64cb3fa_openapi_tool_call_py.html  z_af79f3804eddddbf___init___py.html  z_af79f3804eddddbf_app_config_py.html  z_af79f3804eddddbf_server_config_py.html  z_c6e166d7a34aa7df___init___py.html  z_c6e166d7a34aa7df_bp_portal_py.html  z_cbe1b3ad6dd45900_cuecode_config_py.html  z_cbe1b3ad6dd45900_openapi_server_py.html  z_cbe1b3ad6dd45900_openapi_spec_py.html
search/: search_index.json
src/: src_dir.py
src/actors/: __init__.py  (+1 more)
(+108 files in other folders)
