[project]
name = "src"
version = "0.0.0"
# Python kept back due to spaCy dependency.
# https://github.com/explosion/spaCy/issues/13658#issuecomment-2532080140
requires-python = ">=3.12.10,<3.13"

# This config used from the following source, which also documents the pylint
# extension in use:
# https://github.com/DetachHead/pylint-module-boundaries/blob/master/README.md
[tool.pylint.MASTER]
load-plugins = "pylint_module_boundaries"
banned-imports = '''
{
    "common(\\..*)?": ["app(\\..*)?", "configuration(\\..*)?", "runtime(\\..*)?"],
    "app(\\..*)?": ["configuration(\\..*)?", "runtime(\\..*)?"],
    "configuration(\\..*)?": ["app(\\..*)?", "runtime(\\..*)?"],
    "runtime(\\..*)?": ["configuration(\\..*)?", "app(\\..*)?"]
}
'''
banned-imports-check-usages = true

# Remove requirements for types when importing CueCode and third-party modules
#
# This is the most extreme solution to the "import-untyped" error found
# at the following source:
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]
plugins = ["sqlalchemy.ext.mypy.plugin"]